# utoken

./: Cargo.toml
migrations/: 20251212100053_token_store.down.sql  20251212100053_token_store.up.sql
scripts/: build.Dockerfile  build.docker-compose.yaml  build.sh  xbin
src/: .ui.  account.rs  conversion.rs  database.rs  lib.rs  login.rs  main.rs  token.rs  token_misc.rs
src/client/: mod.rs  test.rs
src/oauth_steam/: mod.rs  steal.rs  verify.rs
src/oauth_steam/bridge/: index.html  package-lock.json  package.json  vite.config.ts
src/oauth_steam/bridge/src/: main.tsx  sutils.ts
src/oauth_steam/bridge/src/pages/: account.tsx  callback.tsx
src/oauth_steam/bridge/src/utils/: dotLocalProxy.ts
sutils-ts/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.build.json  vite.config.ts
sutils-ts/lib/: current_page.ts  externalStore.ts  main.ts  token_store.ts  utokens.ts
sutils-ts/lib/components/: shadowDiv.tsx
sutils-ts/lib/styles/: shared.css
ui_web/: index.html  package-lock.json  package.json  vite.config.ts
ui_web/src/: App.tsx  main.tsx  sutils-ts
ui_web/src/pages/: account.css  account.tsx  login.css  login.tsx  set_token.tsx
utoken-client/: Cargo.toml
utoken-client/src/: lib.rs
