[package]
name = "utoken"
version = "0.1.0"
edition = "2024"

[dependencies]
cell_reg = { path = "../cell_reg/" }
sutils = { path = "../cell_reg/sutils/" }

axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = "0.4.42"
anyhow = "1.0.100"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

[workspace]
members = ["utoken-client"]
