[package]
name = "utoken"
version = "0.1.0"
edition = "2024"

[dependencies]
cell_reg = { path = "../cell_reg/" }
sutils = { path = "../cell_reg/sutils/" }

axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
serde = "1.0.228"
serde_json = "1.0.145"
http-serde = "2.1.1"
glob = "0.3.3"
axum-extra = { version = "0.12.2", features = ["cookie", "typed-header"] }
reqwest = { version = "0.12.25", features = ["json"] }
time = "0.3.44"
cookie = "0.18.1"

[workspace]
members = ["utoken-client"]
